--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.8.0",
+    "react-table-css-unit": "^0.1.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
