--- a/tools/k8s/gke/01-deployment.yaml
+++ b/tools/k8s/gke/01-deployment.yaml
@@ -16,6 +16,9 @@ spec:
       labels:
         app: capstone-frontend-app
     spec:
+      nodeSelector:
+        cloud.google.com/gke-spot: "true"
+        terminationGracePeriodSeconds: 25
       containers:
         - name: capstone-frontend-service
           image: <IMAGE>
